# ReceiptLooker

./: .gitignore  README.md  pyproject.toml
docs/: maarittelydokumentti.md
docs/vikkoraportit/: viikkoraportti2.md  viikkoraportti3.md  viikkoraportti5.md  vikkoraportti2.md
generator/: create_dataset.py  render_digits.py
mlp/: activations.py  demo_mlp.py  layers.py  losses.py  network.py
segmentation/: line_segmentation.py
templates/: index.html
tests/: predict_digit.py
