[project]
name = "receiptlooker"
version = "0.1.0"
description = "University project"
authors = [
    {name = "Aleksandr Kondratiuk"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
