[project]
name = "receiptlooker"
version = "0.1.0"
description = "University project"
authors = [
    {name = "Aleksandr Kondratiuk"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
